--- a/src/component/Login.css
+++ b/src/component/Login.css
@@ -1,6 +1,8 @@
 .login {
-    position: absolute;
+    position: fixed;
     background-color: #222222;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     display: flex;
@@ -10,8 +12,96 @@
 
 .login-box {
     display: inline-flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 4rem;
+    padding-top: 4rem;
+    padding-bottom: 1rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
     background-color: white;
+}
+
+.login-title-kor {
+    color: #C31632;
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.login-title-eng {
+    color: #C31632;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.login-input-box-list {
+    margin-top: 2.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.login-input-box {
+    width: 14rem;
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: 1px solid #C31632;
+    border-radius: 0.25rem;
+}
+
+.login-input {
+    width: 100%;
+    margin-left: 0.75rem;
+    border: 0px;
+    outline: none;
+    color: #C31632;
+    font-size: 0.8rem;
+}
+
+.login-input::placeholder {
+    color: #C31632;
+}
+
+.login-input-icon {
+    width: 1rem;
+    height: 1rem;
+}
+
+
+.login-button {
+    width: 14rem;
+    padding: 0.5rem;
+    background-color: #C31632;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0.25rem;
+    cursor: pointer;
+}
+
+.login-button-text {
+    font-size: 0.75rem;
+    color: #ffffff;
+    font-weight: 600;
+}
+
+.find-box {
+    margin-top: 0.25rem;
+}
+
+.find-text {
+    color: #95A5A6;
+    font-size: 0.7rem;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.bottom-title-text {
+    font-size: 1.1rem;
+    color: #51626F;
+    font-weight: 600;
+    margin-top: 5rem;
 }
