--- a/src/component/Navigation.css
+++ b/src/component/Navigation.css
@@ -1,7 +1,4 @@
 .navigation {
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     box-sizing: border-box;
     display: flex;
@@ -9,6 +6,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem;
+    background-color: white;
 }
 
 .logo-img {
