--- a/src/component/Home.css
+++ b/src/component/Home.css
@@ -12,7 +12,7 @@
 .home-contents {
     flex: 1;
     width: 55rem;
-    padding-top: 2rem;
+    padding-top: 7rem;
     padding-bottom: 2rem;
 }
 
@@ -94,8 +94,10 @@
 @media (max-width: 55rem) {
     .home {
         align-items: flex-start;
+        overflow-x: scroll;
     }
     .home-contents {
         margin-left: 4rem;
+        margin-right: 4rem;
     }
 }
