--- a/src/component/Home.css
+++ b/src/component/Home.css
@@ -16,6 +16,17 @@
     padding-bottom: 2rem;
 }
 
+@media (max-width: 55rem) {
+    .home {
+        align-items: flex-start;
+        overflow-x: scroll;
+    }
+    .home-contents {
+        margin-left: 4rem;
+        margin-right: 4rem;
+    }
+}
+
 .home-greetings-box {
     display: flex;
     flex-direction: row;
@@ -87,7 +98,7 @@
     cursor: pointer;
 }
 
-.react-calendar {
+.reservation-date-calendar {
     position: fixed;
     border-radius: 0.75rem;
 }
@@ -103,13 +114,95 @@
 }
 
 
-@media (max-width: 55rem) {
-    .home {
-        align-items: flex-start;
-        overflow-x: scroll;
-    }
-    .home-contents {
-        margin-left: 4rem;
-        margin-right: 4rem;
-    }
+.rep-modal-background {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F8F9FB80;
+}
+
+.rep-modal {
+    width: 20rem;
+    background-color: white;
+    padding: 1rem;
+}
+
+.rep-modal-title-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.rep-modal-title {
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+
+.rep-modal-option-box {
+    width: 100%;
+    height: 2rem;
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.rep-modal-option {
+    border: 0.1rem #C31632 solid;
+    color: #C31632;
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.rep-modal-option-selected {
+    background-color: #C31632;
+    color: white;
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.rep-end-count-box {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: row;
+}
+
+.rep-count-input {
+    width: 1.5rem;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-color: #FFE4E0;
+    border: 0;
+    outline: none;
+}
+
+.rep-end-count-description {
+    margin-left: 0.25rem;
+    font-weight: 600;
+}
+
+.rep-reservation-button {
+    background-color: #C31632;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    height: 2rem;
+    cursor: pointer;
+}
+
+.end-date-calendar {
+    margin-top: 1rem;
 }
