Implement wip box

--- a/src/Common.css
+++ b/src/Common.css
@@ -71,3 +71,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.row-box {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
