--- a/src/Common.css
+++ b/src/Common.css
@@ -71,3 +71,53 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.home {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    background-color: #F8F9FB;
+}
+
+.home-mobile {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    background-color: #F8F9FB;
+}
+
+.home-contents {
+    flex: 1;
+    width: 55rem;
+    padding-top: 7rem;
+    padding-bottom: 2rem;
+}
+
+.home-contents-mobile {
+    flex: 1;
+    width: calc(100% - 2rem);
+    padding-top: 5rem;
+    padding-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (max-width: 55rem) {
+    .home {
+        align-items: flex-start;
+        overflow-x: scroll;
+    }
+    .home-contents {
+        margin-left: 4rem;
+        margin-right: 4rem;
+    }
+}
