--- a/src/Common.css
+++ b/src/Common.css
@@ -10,6 +10,10 @@
     cursor: pointer;
 }
 
+.margin-top-05rem {
+    margin-top: 0.5rem;
+}
+
 .margin-top-1rem {
     margin-top: 1rem;
 }
@@ -120,4 +124,74 @@
         margin-left: 4rem;
         margin-right: 4rem;
     }
+}
+
+.modal-background {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F8F9FB80;
+}
+
+.modal {
+    width: 20rem;
+    background-color: white;
+    padding: 1rem;
+}
+
+.modal-mobile {
+    width: calc(100% - 4rem);
+    background-color: white;
+    padding: 1rem;
+}
+
+.modal-title-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.modal-title {
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+
+.column-box {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-button-box {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.modal-cancel-button {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    height: 2rem;
+    cursor: pointer;
+}
+
+.modal-cancel-text {
+    color: #565665;
+}
+
+.modal-ok-button {
+    width: 50%;
+    background-color: #C31632;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    height: 2rem;
+    cursor: pointer;
+    border-radius: 0.5rem;
 }
