--- a/src/component/MyPage.css
+++ b/src/component/MyPage.css
@@ -55,3 +55,18 @@
     margin-right: 1.25rem;
     cursor: pointer;
 }
+
+.update-password-input {
+    padding: 0.5rem;
+    margin-top: 0.5rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 0.25rem;
+    border: #777777 1px solid;
+}
+
+.update-password-input:focus {
+    outline: none !important;
+    border: #C31632 2px solid;
+}
