--- a/src/component/Navigation.css
+++ b/src/component/Navigation.css
@@ -14,6 +14,11 @@
     width: 3rem;
 }
 
+.menu-box {
+    display: flex;
+    flex-direction: row;
+}
+
 .menu-item-box {
     width: 2.5rem;
     height: 3rem;
@@ -22,6 +27,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 0 0.25rem;
 }
 
 .menu-item-logo-img {
@@ -32,6 +38,11 @@
 .menu-item-text {
     font-size: 0.75rem;
     color: white;
+}
+
+.menu-item-text-off {
+    font-size: 0.75rem;
+    color: black;
 }
 
 .mypage-img {
