--- a/src/Common.css
+++ b/src/Common.css
@@ -171,7 +171,7 @@
 }
 
 .modal-cancel-button {
-    width: 50%;
+    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -185,7 +185,7 @@
 }
 
 .modal-ok-button {
-    width: 50%;
+    flex: 1;
     background-color: #C31632;
     display: flex;
     justify-content: center;
