--- a/src/Common.css
+++ b/src/Common.css
@@ -200,6 +200,18 @@
     border-radius: 0.5rem;
 }
 
+.modal-ok-button-disabled {
+    flex: 1;
+    background-color: #AEAEAE;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    height: 2rem;
+    cursor: pointer;
+    border-radius: 0.5rem;
+}
+
 .row-box {
     display: flex;
     flex-direction: row;
