--- a/src/component/ManageRoomModal.css
+++ b/src/component/ManageRoomModal.css
@@ -15,6 +15,13 @@
     padding: 0.3rem 0;
 }
 
+.room-input-box-full {
+    width: calc(100% - 0.6rem);
+    display: flex;
+    flex-direction: column;
+    padding: 0.3rem 0;
+}
+
 .room-input-description {
     font-size: 0.8rem;
 }
