--- a/src/component/ManageRoomModal.css
+++ b/src/component/ManageRoomModal.css
@@ -16,7 +16,7 @@
 }
 
 .room-input-box-full {
-    width: calc(100% - 0.6rem);
+    width: 100%;
     display: flex;
     flex-direction: column;
     padding: 0.3rem 0;
