--- a/src/Common.css
+++ b/src/Common.css
@@ -216,3 +216,20 @@
     display: flex;
     flex-direction: row;
 }
+
+.margin-left-05rem {
+    margin-left: 0.5rem;
+}
+
+.red-button {
+    flex: 1;
+    background-color: #C31632;
+    padding: 0.5rem;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 0.5rem;
+    cursor: pointer;
+}
