--- a/src/Common.css
+++ b/src/Common.css
@@ -233,3 +233,9 @@
     border-radius: 0.5rem;
     cursor: pointer;
 }
+
+.row-space-between {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
