--- a/src/Common.css
+++ b/src/Common.css
@@ -239,3 +239,9 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+.row-space-between {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
